--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
     "start": "next start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["nw", "next", "react"],
+  "keywords": [
+    "nw",
+    "next",
+    "react"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
     "next": "^4.2.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
+  },
+  "devDependencies": {
+    "babel-plugin-inline-react-svg": "^0.5.2"
   }
 }
