--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   "dependencies": {
     "next": "^4.2.3",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-slick": "^0.17.1",
+    "slick": "^1.12.2",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "babel-plugin-inline-react-svg": "^0.5.2"
