modify-product-start

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "next": "^4.2.3",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "simple-flexbox": "^1.2.0"
   },
   "devDependencies": {
     "babel-plugin-inline-react-svg": "^0.5.2"
